force-app/main/default/objects/ServiceResource/ServiceResource.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>