force-app/main/default/objects/ServiceResource/fields/Is_Subcontractor__c.field-meta.xml
<CustomField>
    <fullName>Is_Subcontractor__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If yes then labour costs are not calculated.</inlineHelpText>
    <label>Is Subcontractor ?</label>
    <type>Checkbox</type>
</CustomField>