force-app/main/default/objects/ServiceResource/fields/Trade_Code__c.field-meta.xml
<CustomField>
    <fullName>Trade_Code__c</fullName>
    <label>Trade Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>