force-app/main/default/objects/ServiceResource/listViews/All_Active_Service_Resources.listView-meta.xml
<ListView>
    <fullName>All_Active_Service_Resources</fullName>
    <columns>Name</columns>
    <columns>RelatedRecord</columns>
    <columns>Description</columns>
    <columns>ResourceType</columns>
    <columns>IsActive</columns>
    <columns>FSL__GanttLabel__c</columns>
    <columns>MSN_Employee_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Active Service Resources</label>
</ListView>