force-app/main/default/objects/ServiceResource/listViews/All_ServiceResources.listView-meta.xml
<ListView>
    <fullName>All_ServiceResources</fullName>
    <columns>Name</columns>
    <columns>RelatedRecord</columns>
    <columns>Description</columns>
    <columns>ResourceType</columns>
    <columns>IsActive</columns>
    <columns>FSL__GanttLabel__c</columns>
    <columns>MSN_Employee_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Service Resources</label>
</ListView>