force-app/main/default/objects/ServiceResource/listViews/Subcontractor_not_in_Salesforce.listView-meta.xml
<ListView>
    <fullName>Subcontractor_not_in_Salesforce</fullName>
    <columns>Name</columns>
    <columns>LastModifiedDate</columns>
    <columns>LastModifiedBy</columns>
    <columns>RelatedRecord</columns>
    <columns>ResourceType</columns>
    <columns>IsActive</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Subcontractor not in Salesforce</label>
</ListView>